--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pyrogram>=2.0.30
+pyrogram==2.0.30
 tgcrypto
 pymongo[srv]==3.12.3
 motor==2.5.1
@@ -6,8 +6,14 @@ marshmallow==3.14.1
 umongo==3.0.1
 requests
 bs4
-git+https://github.com/GouthamSER/cinemagoer
-aiohttp==3.7.4
-git+https://github.com/pyrogram/pyrogram
-datetime
-pytz
+cinemagoer
+aiohttp
+asyncio
+DateTime
+aiofiles
+psutil
+Pillow
+telegraph
+googletrans
+gTTS
+pyshorteners
